Changed Smart Label Initiative to MSU Broad

--- a/src/app/components/welcome-screen/welcome-screen.component.html
+++ b/src/app/components/welcome-screen/welcome-screen.component.html
@@ -1,4 +1,4 @@
-<h2 class="title">Smart Label Initiative</h2>
+<h2 class="title">MSU Eli and Edythe Broad Art Museum</h2>
 <div class="responsive">
   <img class="responsive" src="..\..\..\assets\BroadMuseum.png">
   <button  mat-raised-button mat-primary color="primary" (click)="onEnter()">Enter Museum</button>
