--- a/src/app/components/chatroom-components/chatroom-list/chatroom-list.component.html
+++ b/src/app/components/chatroom-components/chatroom-list/chatroom-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  chatroom-list works!
-</p>
+
+<div class="roomList">
+  <app-room-item
+  [exhibit]=exhibit *ngFor="let exhibit of exhibits">
+  </app-room-item>
+</div>
