--- a/src/app/components/wordpress-post/wordpress-post.component.less
+++ b/src/app/components/wordpress-post/wordpress-post.component.less
@@ -39,3 +39,27 @@ iframe{
 .model{
     margin:0 auto;
 }
+.objects{
+    margin:1em auto;
+    padding:1em auto;
+}
+.bottomNav{
+    bottom:0;
+}
+.exhibitContent{
+    height: auto;
+    width:25em;
+    flex: 9;
+    margin-bottom:.125em;
+    background-color: #fff;
+    padding: 20px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
+}
+
+.bottomWrapper{
+    margin-top:5em;
+}
+
+
