--- a/src/app/components/museum-show-list/museum-show-list.component.html
+++ b/src/app/components/museum-show-list/museum-show-list.component.html
@@ -2,8 +2,9 @@
 
 <mat-toolbar color="primary" class="topNav">
   <mat-toolbar-row>
-    <a mat-button routerLink="/home"><mat-icon>flight_takeoff</mat-icon></a>
+    <a mat-button routerLink="/home"><mat-icon>home</mat-icon></a>
     <h2>MSU Broad Art Museum</h2>
+    <a mat-button routerLink="/"><mat-icon>flight_takeoff</mat-icon></a>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="feed">
@@ -13,12 +14,15 @@
     </button>
   </div>
 </div>
+
+<div class="bottomWrapper">
 <mat-toolbar color="primary" class="bottomNav">
   <mat-toolbar-row>
       <a  mat-button  routerLink="/home">Tours</a>
       <a  mat-button  routerLink="/home">AR</a>
       <a  mat-fab  routerLink="/home" color="primary"><mat-icon>power_settings_new</mat-icon></a>
-      <a  mat-button  routerLink="/home">Chat</a>
+      <a  mat-button  routerLink="/chat">Chat</a>
       <a  mat-button  routerLink="/home">...</a>
   </mat-toolbar-row>
 </mat-toolbar>
+</div>
