--- a/src/app/components/wordpress-label/wordpress-label.component.html
+++ b/src/app/components/wordpress-label/wordpress-label.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="primary" class="toolbar">
-  <mat-toolbar-row>
-    <a mat-button onClick="javascript:history.back()"><mat-icon>arrow_back</mat-icon></a>
-    <h2 [innerHTML]="post.title.rendered"></h2>
-    <a mat-button (click)="chatClicked()"><mat-icon>chat_bubble</mat-icon></a>
-  </mat-toolbar-row>
-</mat-toolbar>
+<div class="feed">
+  <div class="exhibitContainer">
+    <button mat-raised-button class="exhibitContent" (click)="onClick(category.id)" *ngFor="let category of currentCategories">
+      {{category.name}}
+    </button>
+  </div>
+</div>
 <mat-card class="featuredArt" class="center">
   <img alt="Artwork image" class="mat-card-image" mat-card-image [src]="post.acf.image.url">
   <mat-card-content>
@@ -30,15 +30,3 @@
   <br>
 </div>
 <br>
-
-<div class="bottomWrapper">
-<mat-toolbar color="primary" class="bottomNav">
-    <mat-toolbar-row>
-        <a  mat-button  routerLink="/home">Tours</a>
-        <a  mat-button  routerLink="/home">AR</a>
-        <a  mat-fab  routerLink="/home" color="primary"><mat-icon>power_settings_new</mat-icon></a>
-        <a  mat-button  (click)="chatClicked()">Chat</a>
-        <a  mat-button  routerLink="/home">...</a>
-    </mat-toolbar-row>
-  </mat-toolbar>
-</div>
