Labels now pull correctly @ buttons update

--- a/src/app/components/wordpress-label/wordpress-label.component.html
+++ b/src/app/components/wordpress-label/wordpress-label.component.html
@@ -1,32 +1,37 @@
-<div class="feed">
+<div class="feed" *ngIf="showButtons===true">
   <div class="exhibitContainer">
-    <button mat-raised-button class="exhibitContent" (click)="onClick(category.id)" *ngFor="let category of currentCategories">
-      {{category.name}}
+    <button mat-raised-button id= 0 class="exhibitContent" (click)="onClick(labels[0])">
+      Smart Label 1
+    </button>
+    <br>
+    <button id=1 mat-raised-button class="exhibitContent" (click)="onClick(labels[1])">
+      Smart Label 2
     </button>
   </div>
 </div>
-<mat-card class="featuredArt" class="center">
-  <img alt="Artwork image" class="mat-card-image" mat-card-image [src]="post.acf.image.url">
-  <mat-card-content>
-    <p class = "artistName">{{post.acf.artist_name}}</p>
-    <p class = "artistLocation">{{post.acf.artist_location}}</p>
-    <p class = "artistBirthYear">{{post.acf.artist_birth_year}}</p>
-    <p class = "artworkTitle">{{post.acf.artwork_title}}</p>
-    <p class = "artworkYear">{{post.acf.artwork_year}}</p>
-    <p class = "artworkMaterials">{{post.acf.artwork_materials}}</p>
-    <p class = "acknowledgements">{{post.acf.acknowledgements}}</p>
-  </mat-card-content>
-</mat-card> 
-<div class="center">
-    <audio [src] = "audioURL" controls></audio>
-</div>
-<div class ="center" [innerHTML] = "innerHTML"></div>
-<div class ="center" [innerHTML] = "videoHTML"></div>
-<p class="center" *ngIf="subCategories.length!==0"><b>Exhibits Within Collection</b></p>
-<div class="center" *ngFor="let category of subCategories">
-  <button mat-raised-button class="exhibitContent" (click)="onSubCategoryClick(category.id)">
-      {{category.name}}
-  </button>
+<div class="labelContent" *ngIf="showLabelContent">
+  <mat-card class="featuredArt" class="center">
+    <img alt="Artwork image" class="mat-card-image" mat-card-image [src]="labelContent.acf.image.url"
+    [height] = "labelContent.acf.image.sizes['medium-height']" [width]="labelContent.acf.image.sizes['medium-width']" >
+    <mat-card-content>
+      <p class = "artistName">{{labelContent.acf.artist_name}}</p>
+      <p class = "artistLocation">{{labelContent.acf.artist_location}}</p>
+      <p class = "artistBirthYear">{{labelContent.acf.artist_birth_year}}</p>
+      <p class = "artworkTitle">{{labelContent.acf.artwork_title}}</p>
+      <p class = "artworkYear">{{labelContent.acf.artwork_year}}</p>
+      <p class = "artworkMaterials">{{labelContent.acf.artwork_materials}}</p>
+      <p class = "acknowledgements">{{labelContent.acf.acknowledgements}}</p>
+      <div class="center" *ngIf="hasAudio">
+          <audio [src] = "audioURL" controls ></audio>
+      </div>
+    </mat-card-content>
+  </mat-card> 
+
+  <div class ="center" class="innerHTML" [innerHTML] = "innerHTML" ></div>
+  <div class ="center" [innerHTML] = "videoHTML" *ngIf="hasVideo"></div>
+  <div class="center">
+    <img [src] = "labelContent.acf.qr_image.url" alt="QR Code" [height]= "labelContent.acf.qr_image.sizes['medium-height']"
+    [width]="labelContent.acf.qr_image.sizes['medium-width']" *ngIf=hasQRCode>
+  </div>
   <br>
 </div>
-<br>
