--- a/src/app/components/wordpress-label/wordpress-label.component.less
+++ b/src/app/components/wordpress-label/wordpress-label.component.less
@@ -12,7 +12,6 @@
 }
 .center{
     text-align: center;
-    top:3.5em;
 }
 .toolbar{
   position: fixed;
@@ -48,7 +47,7 @@ iframe{
 }
 .exhibitContent{
     height: auto;
-    width:25em;
+    width:70%;
     flex: 9;
     margin-bottom:.125em;
     background-color: #fff;
@@ -62,4 +61,7 @@ iframe{
     margin-top:5em;
 }
 
-
+.innerHTML{
+    padding:inherit;
+    text-align: center;
+}
