--- a/src/app/components/wordpress-label/wordpress-label.component.html
+++ b/src/app/components/wordpress-label/wordpress-label.component.html
@@ -33,5 +33,8 @@
     <img [src] = "labelContent.acf.qr_image.url" alt="QR Code" [height]= "labelContent.acf.qr_image.sizes['medium-height']"
     [width]="labelContent.acf.qr_image.sizes['medium-width']" *ngIf=hasQRCode>
   </div>
+  <button id=1 mat-raised-button class="exhibitContent" (click)="showLabels()">
+    Other Labels
+  </button>
   <br>
 </div>
