--- a/src/app/components/wordpress-label/wordpress-label.component.less
+++ b/src/app/components/wordpress-label/wordpress-label.component.less
@@ -1,9 +1,4 @@
-.button1{
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    left: 30px; /* Place the button 30px from the right */
-    z-index: 2;
-}
+
 .button2{
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
@@ -68,4 +63,29 @@ iframe{
 
 .artworkImage{
     width:auto;
+}
+
+body{
+    margin: 50px 0px 0px 50px;
+}
+.p1{
+    font: bold 35px Helvetica;
+}
+    
+.p2{
+    font: normal 25px Helvetica;  
+}
+.p3{
+    font: bold italic 35px Helvetica;
+}
+        
+.button1 {
+    border: none;
+    padding: 16px 32px;
+    
+    float: right;
+    color: #808080;
+    
+    cursor: pointer;
+    font: Helvetica;    
 }
