Added New Label & Functionality based on new WP

--- a/src/app/components/wordpress-comment/wordpress-comment.component.html
+++ b/src/app/components/wordpress-comment/wordpress-comment.component.html
@@ -1,6 +1,6 @@
     <div class="messageContainer">
       <div class="messageData">
-        <span class="sender">{{ author_name }}</span>
+        <span class="sender">{{ author }}</span>
         <span class="timestamp">{{ timeStamp | date: 'MM/dd/yyyy hh:mm:ss' }}</span>
       </div>
       <div class="messageContent">{{ messageContent }}</div>
