LabelSelect for new labels

--- a/src/app/components/museum-show-list/museum-show-list.component.html
+++ b/src/app/components/museum-show-list/museum-show-list.component.html
@@ -22,7 +22,7 @@
       <a  mat-button  routerLink="/home">AR</a>
       <a  mat-fab  routerLink="/home" color="primary"><mat-icon>power_settings_new</mat-icon></a>
       <a  mat-button  routerLink="/chat">Chat</a>
-      <a  mat-button  routerLink="/newLabel">...</a>
+      <a  mat-button  routerLink="/labelSelect">...</a>
   </mat-toolbar-row>
 </mat-toolbar>
 </div>
