--- a/src/app/components/wordpress-hosted-chat/wordpress-hosted-chat.component.html
+++ b/src/app/components/wordpress-hosted-chat/wordpress-hosted-chat.component.html
@@ -22,7 +22,7 @@
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
         <a mat-button routerLink="/home"><mat-icon>home</mat-icon></a>
-        <span [innerHTML]="currentArtwork.title.rendered"></span>
+        <span [innerHTML]="currentArtwork.ACF.artwork_title"></span>
       </mat-toolbar>
       <!-- Add Content Here -->
 
